tests/fixtures/functional_patterns/positive/p56_flat_map_option.rs
fn extract_values(items: Vec<Option<Vec<i32>>>) -> Vec<i32> {
    items.into_iter()
        .flat_map(|opt| opt.into_iter().flatten())
        .collect()
}
