tests/fixtures/functional_patterns/negative/n34_option_is_some.rs
fn has_value(opt: Option<i32>) -> bool {
    opt.is_some()
}
